--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "director": "^1.2.8",
     "handlebars": "^4.0.6",
     "jquery": "^3.1.1",
     "todomvc-app-css": "^2.0.6"
